# RequestTicker

./: README.md  SQL Script Create Table.md  settings.json
rust-crud-api/: .env  Cargo.toml  REDME.md
rust-crud-api/src/: error.rs  main.rs  middleware.rs
rust-crud-api/src/department/: handlers.rs  models.rs  routes.rs
rust-crud-api/src/manages/: handlers.rs  models.rs  routes.rs
rust-crud-api/src/product/: handlers.rs  models.rs  routes.rs
rust-crud-api/src/request/: handlers.rs  models.rs  routes.rs
rust-crud-api/src/tasks/: handlers.rs  mod.rs  models.rs  routes.rs
rust-crud-api/src/user/: handlers.rs  models.rs  routes.rs
rust-crud-api/uploads/: 074c2b73-8a87-454e-91c2-8f31524d55f9.xlsx  102bf64c-3481-4491-836a-b11b5e40f462.xlsx  1bbe61aa-d2cf-4f82-b45b-b359f34ff2b2.xls  3ec3465a-2a97-4c72-95da-5870a6f4e5c6.xls  499f9ceb-149e-40ba-92ef-f43e9e46ea44.xls  55e6d3fe-01d6-4eba-887d-5d350fa040c5.xls  62a0bc4f-326a-4713-80b7-5d9e3b4e5d69.xls  642991a4-13fa-4021-95e3-f300abe73eef.docx  697b94d6-7904-42e7-a45b-3b22b744a425.xlsx  89966156-9778-4ed5-8fed-92ba7a637d97.docx  be3dd71c-33fb-486e-a368-49e59917ce3e.xls  be7fdf81-a396-44d5-b34b-399a5ea5953c.docx
rust-crud-frontend/: components.json  middleware.ts  package.json  tsconfig.json
rust-crud-frontend/app/: globals.css  layout.tsx
rust-crud-frontend/app/(dashboard)/: layout.tsx  page.tsx
rust-crud-frontend/app/signup/: page.tsx
rust-crud-frontend/components/: mode-toggle.tsx
rust-crud-frontend/config/: menu-config.ts
rust-crud-frontend/lib/: api.ts
rust-crud-frontend/types/: request.ts  user.ts
(+35 files in other folders)
