[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
dotenvy = "0.15"
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
validator = { version = "0.20.0", features = ["derive"] }
uuid = { version = "1.21.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5.3"
password-hash = "0.5.0"
